fix User AddressBug