@@ -2,11 +2,14 @@ package de.morent.backend.services;
 
 import de.morent.backend.tools.VowelConverter;
 import de.morent.backend.entities.Address;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.data.geo.Metrics;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
+import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 
@@ -15,12 +18,21 @@ public class GeocodingService {
     private final RestTemplate restTemplate;
     private final RedisService redisService;
 
+//    public GeocodingService(RestTemplate restTemplate, RedisService redisService) {
+//        this.restTemplate = new RestTemplateBuilder()
+//                .setConnectTimeout(Duration.ofSeconds(15)) // Verbindungstimeout (z.B. 5 Sekunden)
+//                .setReadTimeout(Duration.ofSeconds(15))    // Lese-Timeout (z.B. 5 Sekunden)
+//                .build();
+//        this.redisService = redisService;
+//    }
+
+
     public GeocodingService(RestTemplate restTemplate, RedisService redisService) {
         this.restTemplate = restTemplate;
         this.redisService = redisService;
     }
 
-    public String convertAddToCoords(Address newAddress) {
+    public String convertAddressToCoordinates(Address newAddress) {
         String street = newAddress.getStreet().replace(" ", "-");
         String address = street + " " + newAddress.getHouseNumber() + ","
                 + newAddress.getCity() + ","
@@ -40,13 +52,26 @@ public class GeocodingService {
                 .queryParam("format", "json")
                 .queryParam("addressdetails", "1")
                 .toUriString();
-
+    try{
         List<Map<String, Object>> response = restTemplate.getForObject(url, List.class);
 
         if (response != null && !response.isEmpty()) {
-            Map<String, Object> location = response.getFirst();
-            return  location.get("lat") + ", " + location.get("lon");
+            Map<String, Object> location = response.get(0);
+            String latitude = (String) location.get("lat");
+            String longitude = (String) location.get("lon");
+
+            if (latitude != null && longitude != null) {
+                String coordinates = latitude + ", " + longitude;
+                // Wert in Redis speichern
+                redisService.addLocation(address, Double.parseDouble(latitude),  Double.parseDouble(longitude));
+                return coordinates;
+            }
         }
+    } catch (RestClientException e) {
+        // Logge den Fehler und behandle ihn entsprechend
+        System.err.println("Fehler bei der Anfrage an die Geokodierungs-API: " + e.getMessage());
+    }
+
         return null;
     }
 
